--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/AddTestParameterUserControl.xaml
@@ -19,48 +19,48 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-            <Grid >
-            <Grid.ColumnDefinitions>
-             <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
+    <Grid >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" SharedSizeGroup="Column0" />
             <ColumnDefinition Width="*" SharedSizeGroup="Column1"/>
             <ColumnDefinition Width="30" />
             <ColumnDefinition Width="auto" SharedSizeGroup="Column3" />
             <ColumnDefinition Width="*" SharedSizeGroup="Column4"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-            </Grid.RowDefinitions>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" Name="normRow"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
+        </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0"  Content="{x:Static res:Resources.CommutationTypeT}"/>
-            <ComboBox Grid.Column="1" Grid.Row="0" 
+        <Label Grid.Column="0" Grid.Row="0"  Content="{x:Static res:Resources.CommutationTypeT}" Margin="0,0,10,0"/>
+        <ComboBox Grid.Column="1" Grid.Row="0" Name="normComboBox" 
                                       ItemsSource="{Binding Source={StaticResource ModuleCommutationTypes}}"
                                       SelectedValue="{Binding CommutationType}" SelectedValuePath="Value" DisplayMemberPath="Key" />
-            <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.Force}" />
-            <customControl:NumericUpDown Grid.Column="4" Grid.Row="0" Value="{Binding ParameterClamp}" />
+        <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.Force}" />
+        <customControl:NumericUpDown Grid.Column="4" Grid.Row="0" Value="{Binding ParameterClamp}" />
 
         <Label Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Height_Prof}"  />
         <customControl:NumericUpDown Grid.Column="1" Grid.Row="1" Value="{Binding Height}"  />
 
         <Label Grid.Column="3" Grid.Row="1" Content="{x:Static res:Resources.Temp}" />
         <customControl:NumericUpDown Grid.Column="4" Grid.Row="1" Value="{Binding Temperature}"/>
-                
+
         <Label Grid.Column="0" Grid.Row="2" Content="{x:Static res:Resources.ParameterType}" 
                    Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
-            <ComboBox Grid.Column="1" Grid.Row="2" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"
-                      ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" 
+        <ComboBox Grid.Column="1" Grid.Row="2" Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"
+                      ItemsSource="{Binding Source={StaticResource TestParametersTypes}}" Height="{Binding ElementName=normComboBox, Path=ActualHeight}"
                       DisplayMemberPath="Name" SelectedValuePath="TestParametersType" 
                       SelectedValue="{Binding Path=ProfileVm.SelectedTestParametersType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type pages:ProfilesPage}}}">
-            </ComboBox>
-            <Button Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
-                    Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}"/>
-            
-            
-            
-            <!--<CheckBox Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" IsChecked="{Binding IsHeightMeasureEnabled}" Content="{x:Static res:Resources.MeasureDialog_Title}" 
+        </ComboBox>
+        <Button Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2"  Style="{StaticResource PrimaryButton}" Height="{Binding ElementName=normComboBox, Path=ActualHeight}" Content="{x:Static res:Resources.Add}" Click="AddTestParameters_Click"
+                    Visibility="{Binding ProfileVm.IsEditModeActive, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=pages:ProfilesPage}, Converter={StaticResource B2V}}" Margin="0,5,0,5" Width="Auto"/>
+
+
+
+        <!--<CheckBox Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" IsChecked="{Binding IsHeightMeasureEnabled}" Content="{x:Static res:Resources.MeasureDialog_Title}" 
                       Visibility="{Binding IsReadOnly, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}, Converter={StaticResource B2VI}}"/>-->
-            
-        </Grid>
+
+    </Grid>
 </UserControl>
