--- a/SCME.UI.SCTU/ResourceDictionaries/CommonResources.xaml
+++ b/SCME.UI.SCTU/ResourceDictionaries/CommonResources.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib"
+                    xmlns:bvtBag="clr-namespace:SCME.Types.BVT;assembly=SCME.Types"
                     xmlns:bvt="clr-namespace:SCME.Types.BVT;assembly=SCME.Types"
                     xmlns:vtm="clr-namespace:SCME.Types.SL;assembly=SCME.Types"
                     xmlns:commutation="clr-namespace:SCME.Types.Commutation;assembly=SCME.Types"
@@ -166,7 +167,7 @@
 
     <ObjectDataProvider x:Key="DataFromMeasurementModeEnum" MethodName="GetNames" ObjectType="{x:Type sys:Enum}">
         <ObjectDataProvider.MethodParameters>
-            <x:Type TypeName="bvt:BVTMeasurementMode"/>
+            <x:Type TypeName="bvtBag:BVTMeasurementMode"/>
         </ObjectDataProvider.MethodParameters>
     </ObjectDataProvider>
 
