Изменил списки, заменил стрелочку на прямоугольник

--- a/SCME.WpfControlLibrary/Styles/ListView.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListView.xaml
@@ -18,14 +18,14 @@
                         <Setter.Value>
                             <ControlTemplate TargetType="ListBoxItem" >
                                 <Grid Background="{TemplateBinding Background}">
-                                    <Polygon Name="polygon" Stretch="Fill" Fill="Transparent" Points="0,0 190,0 200,10 190,20 0,20" />
+                                    <Grid Name="background"  Background="Transparent"  />
                                     <ContentPresenter Content="{TemplateBinding ContentControl.Content}" Height="60" x:Name="ContentPresenter"
                                                       TextBlock.Foreground="Black"
                                                       ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}"/>
                                 </Grid>
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsSelected" Value="True">
-                                        <Setter TargetName="polygon" Property="Fill" Value="{StaticResource PurpleBrush1}" />
+                                        <Setter TargetName="background" Property="Background" Value="{StaticResource PurpleBrush1}" />
                                         <Setter TargetName="ContentPresenter" Property="TextBlock.Foreground" Value="White"></Setter>
                                     </Trigger>
                                 </ControlTemplate.Triggers>
