--- a/SCME.UI/PagesTech/BvtPage.xaml
+++ b/SCME.UI/PagesTech/BvtPage.xaml
@@ -215,24 +215,29 @@
               X1="0" Y1="0" X2="0" Y2="{Binding ElementName=borderParams, Path=ActualHeight}"
               Grid.Column="3" Grid.Row="0" Margin="0,20,0,20" />
 
-        <Button x:Name="btnBack" x:FieldModifier="private"
-                Grid.Column="0" Grid.Row="1" Style="{StaticResource BackButton}"
+        <Grid Grid.Row="1" Grid.ColumnSpan="4">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <Button x:Name="btnBack" Grid.Column="0" Grid.Row="2" x:FieldModifier="private" Margin="6" Style="{StaticResource BackButton}"   VerticalAlignment="Bottom"             
                 Content="{x:Static res:Resources.Back}"
-                Click="Back_Click"
-                Margin="6" />
-        <Button x:Name="btnTemp" x:FieldModifier="private"
-                Grid.Column="1" Grid.Row="1"
+                Click="btnBack_OnClick"/>
+
+            <Button x:Name="btnTemperature" Grid.Column="1" Grid.Row="2" x:FieldModifier="private" Margin="6"    VerticalAlignment="Bottom"           
                 Content="{x:Static res:Resources.SetTemp}"
-                Click="BtnTemp_OnClick"
-                Margin="6" />
-        <Button Grid.Column="2" Grid.Row="1"
+                Click="btnTemperature_OnClick"/>
+
+            <Button Grid.Column="2" Grid.Row="2" Margin="6" Background="{StaticResource xRed1}" VerticalAlignment="Bottom"
                 Content="{x:Static res:Resources.Stop}"
-                Click="Stop_Click"
-                Margin="6" Background="{StaticResource xRed1}" />
-        <Button x:Name="btnStart" x:FieldModifier="private"
-                Grid.Column="3" Grid.Row="1"
-                Content="{x:Static res:Resources.Start}"
-                Click="Start_Click"
-                Margin="6" Background="{StaticResource xGreen1}" />
+                Click="btnStop_OnClick"/>
+
+            <Button x:Name="btnStart" Grid.Column="3" Grid.Row="2" HorizontalAlignment="Right" x:FieldModifier="private" Margin="6" Background="{StaticResource xGreen1}" VerticalAlignment="Bottom"
+                Content="{x:Static res:Resources.Start}" 
+                Click="btnStart_OnClick"/>
+        </Grid>
     </Grid>
 </Page>
